--- a/css/main.css
+++ b/css/main.css
@@ -3,4 +3,5 @@ body {
     background-color: #ccc;
     background-repeat: no-repeat;
     background-size: cover;
+    image-rendering: optimizeSpeed;
 }
