--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 body {
     background-image: url(../images/4k-white-core-galaxy-a6irb3lyh2w8jwpa.jpg);
-    background-color: #ccc;
+    background-color: #cccccc;
     background-repeat: no-repeat;
     background-size: cover;
-    image-rendering: optimizeSpeed;
 }
