--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,34 @@
 body {
     background-image: url(../images/4k-white-core-galaxy-a6irb3lyh2w8jwpa.jpg);
     background-color: #cccccc;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    width: 98vw;
+    height: 100vh;
+}
+
+.container{
+    margin-top: 100px;
+    margin-left: calc((100% - 300px) / 2);
+    width: 300px;
+    height: 400px;
+    background-color: rgba(214, 238, 241, 0.4);
+    border-radius: 40px;
+}
+
+h1{
+    color: white;
+    text-align: center;
+    padding: 40px 0px;
+}
+
+input{
+    width: 200px;
+    display: block;
+}
+
+.inputsContainer > input{
+    display: inline-block;
+    width: 125px;
 }
