--- a/css/main.css
+++ b/css/main.css
@@ -8,27 +8,52 @@ body {
     height: 100vh;
 }
 
-.container{
+.container {
     margin-top: 100px;
     margin-left: calc((100% - 300px) / 2);
     width: 300px;
     height: 400px;
     background-color: rgba(214, 238, 241, 0.4);
-    border-radius: 40px;
+    border-radius: 30px;
 }
 
-h1{
+h1 {
     color: white;
     text-align: center;
-    padding: 40px 0px;
+    padding: 30px 0px;
+    font-size: 25px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 600;
 }
 
-input{
-    width: 200px;
+input[type="text"], input[type="password"]{
+    width: 231px;
     display: block;
+    margin: 15px;
+    margin-left: 25px;
+    height: 25px;
+    border: 0;
+    padding: 0;
+    /* text-align: center; */
+    border-radius: 12px;
+    padding-left: 20px;
+    box-shadow: 1px 1px 4px rgb(125, 163, 185);
 }
 
-.inputsContainer > input{
+.inputsContainer>input {
     display: inline-block;
-    width: 125px;
+    width: 98px;
+    margin: 0 0px 15px 25px;
+    float: left;
+}
+
+.inputsContainer>input:nth-child(2) {
+    margin-left: 15px;
+}
+
+#cb{
+    box-shadow: 1px 1px 4px rgb(125, 163, 185);
+    border: 0;
+    display: inline-block;
+    margin-left: 70px;
 }
