--- a/css/terms.css
+++ b/css/terms.css
@@ -1,8 +1,11 @@
 body {
     background-image: url(../images/4k-white-core-galaxy-a6irb3lyh2w8jwpa.jpg);
     background-color: #ccc;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    width: 98vw;
+    height: 100vh;
 }
 
 h1, p {
@@ -10,6 +13,7 @@ h1, p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-shadow: 1px 1px 1px black;
     text-align: center;
+    margin: 40px 100px;
 }
 
 a:link, a:visited {
