--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,16 @@
-body {
+main {
     background-image: url(../images/4k-white-core-galaxy-a6irb3lyh2w8jwpa.jpg);
     background-color: #cccccc;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 98vw;
+    width: 100vw;
     height: 100vh;
+    font-family: Helvetica, sans-serif;
+}
+
+div{
+    display: inline-block;
 }
 
 .container {
@@ -22,7 +27,6 @@ h1 {
     text-align: center;
     padding: 30px 0px;
     font-size: 25px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 600;
 }
 
@@ -43,7 +47,7 @@ input[type="text"], input[type="password"]{
 .inputsContainer>input {
     display: inline-block;
     width: 98px;
-    margin: 0 0px 15px 25px;
+    margin: 0 0px 0px 25px;
     float: left;
 }
 
@@ -55,5 +59,33 @@ input[type="text"], input[type="password"]{
     box-shadow: 1px 1px 4px rgb(125, 163, 185);
     border: 0;
     display: inline-block;
-    margin-left: 70px;
+    margin-left: 71px;
+    width: 16px;
+    height: 16px;
+}
+
+#cbContainer{
+    padding-top: 1px;
+}
+
+#textsContainer{
+    vertical-align: top;
+    font-size: 15px;
+}
+
+a{
+    color: rgb(81, 81, 199);
+    text-decoration: none;
+}
+
+button{
+    background-color: rgb(107, 195, 230);
+    margin-left: 57px;
+    margin-top: 10px;
+    padding: 10px 40px;
+    border-radius: 20px;
+    border: none;
+    color: white;
+    font-weight: 900;
+    box-shadow: 0px 2px 0px 2px rgb(79, 145, 184), 1px 3px 3px 2px rgb(125, 163, 185);
 }
