--- a/css/terms.css
+++ b/css/terms.css
@@ -6,11 +6,11 @@ body {
     background-size: cover;
     width: 98vw;
     height: 100vh;
+    font-family: Helvetica, sans-serif;
 }
 
 h1, p {
     color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-shadow: 1px 1px 1px black;
     text-align: center;
     margin: 40px 100px;
