--- a/css/terms.css
+++ b/css/terms.css
@@ -1,12 +1,17 @@
-body {
+main {
     background-image: url(../images/4k-white-core-galaxy-a6irb3lyh2w8jwpa.jpg);
     background-color: #ccc;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 98vw;
+    width: 100vw;
     height: 100vh;
     font-family: Helvetica, sans-serif;
+}
+
+.spacer{
+    width: 100%;
+    height: 40px;
 }
 
 h1, p {
@@ -17,7 +22,7 @@ h1, p {
 }
 
 a:link, a:visited {
-    margin-left: calc((100% - 153px) / 2 );
+    margin-left: calc((100% - 200px) / 2 );
     background-color: white;
     color: black;
     border: 2px solid rgb(88, 136, 168);
